# CosTuuM

./: BesselFunctions.hpp  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  Doxyfile.in  Matrix.hpp  README.md  SpecialFunctions.hpp  format_script.sh  install_python_module.cmake.in  plot_test_bessel.py  plot_test_special_functions.py  setup.py.in  testBesselFunctions.cpp  testMatrix.cpp  testSpecialFunctions.cpp  write_compiler_info.cmake
.github/actions/unit-tests/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: unit-tests.yml
benchmark/: 1985Draine.txt  1991Mishchenko.py  1991Mishchenko_oblate_ia.txt  1991Mishchenko_oblate_pdg.txt  1991Mishchenko_oblate_ro.txt  1991Mishchenko_prolate_ia.txt  1991Mishchenko_smooth.py  1993Draine.py  README.md
data/: README.md  callindex.out_CpaD03_0.01  callindex.out_CpaD03_0.10  callindex.out_CpeD03_0.01  callindex.out_CpeD03_0.10  callindex.out_silD03
quicksched/: CMakeLists.txt  README.md  atomic.h  config.h  cycle.h  error.h  lock.h  qsched.c  qsched.h  queue.c  queue.h  quicksched.h  res.h  task.h  version.h
scripts/: 1991Mishchenko_oblate_pdg.txt  1991Mishchenko_prolate_pdg.txt  1991Mishchenko_prolate_ro.txt  1993Draine_optical_properties_suvSil.txt  1993Voshchinnikov_fig3.npz  1993Voshchinnikov_fig4.npz  1993Voshchinnikov_fig5.npz  AlignmentChecks_average_plot.py  AlignmentChecks_sim.py  AlignmentChecks_zenith_plot.py  BBOPResult_plot.py  BBOPResult_sim.py  DraineAll_plot.py  DraineAll_sim.py  DraineCarbon_plot.py  DraineCarbon_sim.py  DraineCorrection_plot.py  DraineCorrection_sim.py  DraineScattering_plot.py  DraineScattering_sim.py  DraineShapes_plot.py  DraineShapes_sim.py  Mishchenko_plot.py  Mishchenko_sim.py  README.md  ScalingPlot.py  ScalingTest_08_tasks.txt  ScalingTest_08_types.txt  ScatteringCorrection_plot.py  ScatteringCorrection_sim.py  ShapeBounds_plot.py  ShapeBounds_sim.py  ShapeComparison_plot.py  ShapeComparison_sim.py  ShapeDistribution.py  ShapeQuadrature_plot.py  ShapeQuadrature_sim.py  TaskPlot.py  VoshchinnikovFig3_plot.py  VoshchinnikovFig3_sim.py  (+5 more)
src/: AbsorptionCoefficientTask.hpp  AlignmentAverageTask.hpp  AlignmentDistribution.hpp  CMakeLists.txt  CPUCycle.hpp  CTM.cpp  CTMModule.cpp  CommandLineOption.cpp  CommandLineOption.hpp  CommandLineParser.cpp  CommandLineParser.hpp  CompilerInfo.cpp.in  CompilerInfo.hpp  Configuration.hpp.in  ConfigurationInfo.cpp.in  ConfigurationInfo.hpp.in  ConvergedSizeResources.hpp  CosTuuM.cpp  DavisGreensteinOrientationDistribution.hpp  Direction.hpp  DisabledAlignmentOrientationDistribution.hpp  DraineDustProperties.hpp  DraineDustPropertiesDataLocation.hpp.in  DraineHensleyShapeDistribution.hpp  DustProperties.hpp  Error.hpp  ExtinctionCoefficientTask.hpp  ExtinctionMatrixResource.hpp  GaussBasedResources.hpp  Grain.hpp  GrainProjection.hpp  HEALPixRecorder.hpp  InteractionResource.hpp  IntersectionEvent.hpp  Line.hpp  MD5Sum.hpp  Matrix.hpp  MishchenkoOrientationDistribution.hpp  MonteCarloSimulation.hpp  NBasedResources.hpp  (+37 more)
test/: Assert.hpp  CMakeLists.txt  README.md  plot_test_orientationdistribution.py  plot_test_special_functions.py  plot_tmatrixcalculator_result.py  testDraineDustProperties.cpp  testDraineHensleyShapeDistribution.cpp  testHEALPixRecorder.cpp  testMatrix.cpp  testMonteCarloSimulation.cpp  testOrientationDistribution.cpp  testPoint.cpp  testQuickSched.cpp  testRefractionEvent.cpp  testSpecialFunctions.cpp  testSphericalGrain.cpp  testSphericalGrainProjection.cpp  testTMatrixCalculator.cpp  testTable.cpp  testTaskBasedTMatrixCalculation.cpp  testTaskManager.cpp  test_matrix.py  test_table.txt  test_tmatrixcalculator.txt
tools/: README.md  generate_Kgrid.sh  generate_Zgrid.sh  generate_combined_gif.sh  generate_rotating_sphere.sh  plot_taskgraph.py  plot_tasks.py  rotating_dust_grain.py  rotating_sphere.py
